--- a/src/app.module.css
+++ b/src/app.module.css
@@ -9,9 +9,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 5rem;
+    font-size: 8rem;
     font-weight: bold;
     color: #fff;
+    transition: all 2s ease;
 }
 
 .win {
@@ -28,11 +29,13 @@
     font-size: 5rem;
     font-weight: bold;
     color: #fff;
+    transition: all 2s ease;
 }
 
 .outcomeStyle {
     font-size: 2rem;
     text-align: center;
+    color: #000;
 }
 
 .returnStyle {
