update end screen, stop typing ability after gameover

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -46,3 +46,15 @@
     margin: 0 auto; 
     align-items: center;
 }
+
+.resultText {
+    font-size: 6rem;
+    width: 100%;
+    text-align: center;
+    color: white;
+    position: absolute;
+    left: 0%;
+    font-weight: bold;
+    transition: all 2s ease;
+
+}
