--- a/src/app.module.css
+++ b/src/app.module.css
@@ -38,13 +38,14 @@
 }
 
 .returnStyle {
+    height: 110%;
     max-width: 75%;
     display: flex;
     flex-direction: column;
     gap: 3rem;
-    margin: 0 auto; 
+    margin: 0px auto; 
     align-items: center;
-    overflow: hidden;
+
 }
 
 .resultText {
